--- a/pub/test/619.html
+++ b/pub/test/619.html
@@ -6,7 +6,7 @@
     <title>CSS Image Gallery</title>
 
     <style type="text/css">
-      #gallery {
+      .no-animation {
         height: 270px;
         line-height: 1;
         overflow: hidden;
@@ -15,11 +15,11 @@
         width: 480px;
       }
 
-      .image {
+      .no-animation .image {
         display: inline-block;
       }
 
-      .image img {
+      .no-animation .image img {
         vertical-align: text-bottom;
       }
     </style>
@@ -34,7 +34,7 @@
     <section class="test">
       <h1>No Animation</h1>
 
-      <ul id="gallery">
+      <ul class="gallery no-animation">
         <li id="first" class="image"><a href="#second"><img src="http://placeimg.com/480/270/animals"></a></li>
         <li id="second" class="image"><a href="#third"><img src="http://placeimg.com/480/270/arch"></a></li>
         <li id="third" class="image"><a href="#fourth"><img src="http://placeimg.com/480/270/nature"></a></li>
