--- a/pub/test/621.html
+++ b/pub/test/621.html
@@ -12,13 +12,13 @@
     <header>
       <h1>lang="ja", font-family, and Chrome 42</h1>
 
-      <p>Chrome 42から<code>lang="ja"</code>の場合、設定→詳細設定→ウェブコンテンツ→フォントをカスタマイズで指定したフォントが無視されるようになった。Internet Explorerの挙動と少しにている。</p>
+      <p>Chrome 42から<code>lang="ja"</code>の場合、設定→詳細設定→ウェブコンテンツ→フォントをカスタマイズで指定したフォントが無視されるようになった。Internet Explorerの挙動と少し似ている。</p>
     </header>
 
     <section lang="ja" class="test">
       <h1>美しい日本語</h1>
 
-      <p>標準フォントやSans Serifフォントをメイリオ以外の日本語フォントにした場合でもメイリオになってしまう。</p>
+      <p>標準フォントやSans Serifフォントをメイリオまたはヒラギノ角ゴシックPro以外の日本語フォントにした場合でもメイリオまたはヒラギノ角ゴシックProになってしまう。</p>
     </section>
 
     <section class="test">
