--- a/pub/test/621.html
+++ b/pub/test/621.html
@@ -16,13 +16,13 @@
     </header>
 
     <section lang="ja" class="test">
-      <h1>美しい日本語</h1>
+      <h1>Section with <code>lang="ja"</code></h1>
 
       <p>標準フォントやSans Serifフォントをメイリオまたはヒラギノ角ゴシックPro以外の日本語フォントにした場合でもメイリオまたはヒラギノ角ゴシックProになってしまう。</p>
     </section>
 
     <section class="test">
-      <h1>美しい日本語</h1>
+      <h1>Section without <code>lang</code> attribute</h1>
 
       <p><code>lang</code>属性を指定していない要素では設定通りにフォントが反映される。</p>
     </section>
