--- a/pub/test/622.html
+++ b/pub/test/622.html
@@ -8,42 +8,42 @@
 
     <link href="http://hail2u.net/styles/natural.min.css" rel="stylesheet">
     <style>
-      .protanopia img {
+      .protanopia {
         -webkit-filter: url('622.svg#protanopia');
         filter: url('622.svg#protanopia');
       }
 
-      .protanomaly img {
+      .protanomaly {
         -webkit-filter: url('622.svg#protanomaly');
         filter: url('622.svg#protanomaly');
       }
 
-      .deuteranopia img {
+      .deuteranopia {
         -webkit-filter: url('622.svg#deuteranopia');
         filter: url('622.svg#deuteranopia');
       }
 
-      .deuteranomaly img {
+      .deuteranomaly {
         -webkit-filter: url('622.svg#deuteranomaly');
         filter: url('622.svg#deuteranomaly');
       }
 
-      .tritanopia img {
+      .tritanopia {
         -webkit-filter: url('622.svg#tritanopia');
         filter: url('622.svg#tritanopia');
       }
 
-      .tritanomaly img {
+      .tritanomaly {
         -webkit-filter: url('622.svg#tritanomaly');
         filter: url('622.svg#tritanomaly');
       }
 
-      .achromatopsia img {
+      .achromatopsia {
         -webkit-filter: url('622.svg#achromatopsia');
         filter: url('622.svg#achromatopsia');
       }
 
-      .achromatomaly img {
+      .achromatomaly {
         -webkit-filter: url('622.svg#achromatomaly');
         filter: url('622.svg#achromatomaly');
       }
@@ -105,7 +105,7 @@
     </section>
 
     <section class="test achromatomaly">
-      <h1>Achromatomaly (?/?)</h1>
+      <h1>Achromatomaly (?/全色弱)</h1>
 
       <p><img src="http://placeimg.com/480/270/any"></p>
     </section>
