--- a/pub/test/622-2.html
+++ b/pub/test/622-2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
 
-    <title>Color Blindness Emulator with Filter Effects via CSS</title>
+    <title>Color Blindness Emulator with Filter Effects via CSS and Data URI</title>
 
     <link href="http://hail2u.net/styles/natural.min.css" rel="stylesheet">
     <style>
@@ -51,9 +51,9 @@
   </head>
   <body>
     <header>
-      <h1>Color Blindness Emulator with Filter Effects via CSS</h1>
+      <h1>Color Blindness Emulator with Filter Effects via CSS and Data URI</h1>
 
-      <p>色覚異常をエミュレートするSVGの<code>filter</code>要素を定義し、それをCSSから参照することで特別な装置などを使わずに色覚異常の人がどのように見えているかを確認するツールのプロトタイプ。</p>
+      <p>フィルターを定義したSVGをData URIとして埋め込んだバージョン。</p>
     </header>
 
     <section class="test">
