--- a/pub/test/622.html
+++ b/pub/test/622.html
@@ -105,7 +105,7 @@
     </section>
 
     <section class="test achromatomaly">
-      <h1>Achromatomaly (?/全色弱)</h1>
+      <h1>Achromatomaly (異常3色覚/色弱)</h1>
 
       <p><img src="http://placeimg.com/480/270/any"></p>
     </section>
