--- a/pub/test/622-2.html
+++ b/pub/test/622-2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
 
-    <title>Color Blindness Emulator with Filter Effects via CSS and Data URI</title>
+    <title>Color Blindness Emulator with Filter Effects via CSS and Data URL</title>
 
     <link href="http://hail2u.net/styles/natural.min.css" rel="stylesheet">
     <style>
@@ -51,9 +51,9 @@
   </head>
   <body>
     <header>
-      <h1>Color Blindness Emulator with Filter Effects via CSS and Data URI</h1>
+      <h1>Color Blindness Emulator with Filter Effects via CSS and Data URL</h1>
 
-      <p>フィルターを定義したSVGをData URIとして埋め込んだバージョン。</p>
+      <p>フィルターを定義したSVGをData URLとして埋め込んだバージョン。</p>
     </header>
 
     <section class="test">
@@ -105,7 +105,7 @@
     </section>
 
     <section class="test achromatomaly">
-      <h1>Achromatomaly (?/全色弱)</h1>
+      <h1>Achromatomaly (異常3色覚/色弱)</h1>
 
       <p><img src="http://placeimg.com/480/270/any"></p>
     </section>
