--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 
     <title itemprop="name">Hail2u.net</title>
 
-    <link href="//googleads.g.doubleclick.net" rel="dns-prefetch">
-    <link href="//pagead2.googlesyndication.com" rel="dns-prefetch">
-    <link href="//www.google-analytics.com" rel="dns-prefetch">
-    <link href="//www.google.com" rel="dns-prefetch">
-    <link href="//www.gstatic.com" rel="dns-prefetch">
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="/" rel="canonical">
     <link href="/feed" rel="alternate" type="application/rss+xml">
@@ -76,7 +71,7 @@
       <h1 class="tagline">Hail2u.net is simply a notebook of <a href="https://kyonagashima.com/">Kyo&nbsp;Nagashima</a>.</h1>
     </header>
 
-    <main class="content" role="main">
+    <main class="content">
         <section id="latest-article" class="topic">
             <a href="/blog/webdesign/using-svg-filters.html">
               <h1 class="first-heading">SVGフィルターの利用</h1>
