--- a/documents/index.html
+++ b/documents/index.html
@@ -9,11 +9,6 @@
 
     <title itemprop="name">Documents - Hail2u.net</title>
 
-    <link href="//googleads.g.doubleclick.net" rel="dns-prefetch">
-    <link href="//pagead2.googlesyndication.com" rel="dns-prefetch">
-    <link href="//www.google-analytics.com" rel="dns-prefetch">
-    <link href="//www.google.com" rel="dns-prefetch">
-    <link href="//www.gstatic.com" rel="dns-prefetch">
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="/documents/" rel="canonical">
     <link href="/feed" rel="alternate" type="application/rss+xml">
@@ -76,7 +71,7 @@
       <h1 class="tagline">These are writings, translations, listing, tutorials &amp; others what I learned.</h1>
     </header>
 
-    <main class="content" role="main">
+    <main class="content">
       <section>
         <h1 class="first-heading"><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></h1>
 
