--- a/pub/test/626.html
+++ b/pub/test/626.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
 
-    <title>Infield Label</title>
+    <title>Infield Top Aligned Label</title>
 
     <link href="http://hail2u.net/styles/natural.min.css" rel="stylesheet">
     <style>
@@ -46,7 +46,7 @@
   </head>
   <body>
     <header>
-      <h1>Infield Label</h1>
+      <h1>Infield Top Aligned Label</h1>
 
       <p>フォームの認識性が高まるとされる<a href="http://uxmovement.com/forms/why-infield-top-aligned-form-labels-are-quickest-to-scan/">入力ボックス内の上部にラベルを配置するフォーム・デザイン</a>のCSSによる基本的な実装。</p>
     </header>
