--- a/pub/test/625.html
+++ b/pub/test/625.html
@@ -18,7 +18,7 @@
     <header>
       <h1>Can Un-color?</h1>
 
-      <p>フォントによっては画像になるユニコード絵文字が<code>U+F0FE</code>を使ってテキスト形式に変換できるかどうかテストするページです。</p>
+      <p>フォントによっては画像になるユニコード絵文字が<code>U+FE0E</code>を使ってテキスト形式に変換できるかどうかテストするページです。</p>
     </header>
 
     <section class="test">
