--- a/about/index.html
+++ b/about/index.html
@@ -127,6 +127,7 @@
           <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
           <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
           <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
+          <li><a href="http://fontforge.github.io/en-US/">FontForge</a></li>
           <li><a href="http://git-scm.com/">Git</a></li>
           <li><a href="http://gruntjs.com/">Grunt</a></li>
           <li><a href="http://handlebarsjs.com/">Handlebars.js</a></li>
@@ -139,9 +140,11 @@
           <li><a href="http://www.adobe.com/products/photoshop/">Photoshop</a></li>
           <li><a href="http://pngquant.org/">pngquant</a></li>
           <li><a href="http://sass-lang.com/">Sass</a></li>
+          <li><a href="https://people.mozilla.org/~jkew/woff/">sfnt2woff</a></li>
           <li><a href="https://github.com/svg/svgo">SVGO</a></li>
           <li><a href="http://lisperator.net/uglifyjs/">UglifyJS</a></li>
           <li><a href="http://www.vim.org/">Vim</a></li>
+          <li><a href="https://github.com/google/woff2">woff2</a></li>
         </ul>
 
         <h2>ウェブサイト上で使っているツール</h2>
@@ -174,7 +177,6 @@
         <ul>
           <li><a href="https://twitter.com/hail2unet">Twitterでの@ツイート</a></li>
           <li><a href="https://www.facebook.com/hail2u.net">Facebookでのメッセージ</a></li>
-          <li><a href="https://plus.google.com/+Hail2unet">Google+でのハングアウト</a></li>
           <li><a href="mailto:hail2u@gmail.com">hail2u@gmail.com宛てのメール</a></li>
         </ul>
 
@@ -186,10 +188,10 @@
       <section class="footlinks">
         <ul>
           <li><a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a></li>
-          <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
-          <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
-          <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
-          <li><a href="/feed" rel="alternate" type="application/rss+xml">RSS</a></li>
+            <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
+            <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
+            <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
+            <li><a href="/feed" rel="alternate" type="application/rss+xml">RSS</a></li>
         </ul>
       </section>
     
