--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ul>
       </nav>
     
-      <h1 class="tagline">Hail2u.net is simply a notebook of <a href="https://kyonagashima.com/">Kyo&nbsp;Nagashima</a>. I write <em>what I learned</em> &amp; <em>what is possible</em> on the WWW from Japan.</h1>
+      <h1 class="tagline">I write <em>what I learned</em> &amp; <em>what is possible</em> on the WWW from Japan.</h1>
     </header>
 
     <main class="content">
