--- a/index.html
+++ b/index.html
@@ -161,17 +161,6 @@
               </li>
           </ol>
       </section>
-
-      <section id="subscribe-links">
-        <h1>フォロー</h1>
-
-        <ul class="icon-list">
-          <li><a href="https://twitter.com/hail2unet" itemprop="sameAs"><img alt="Twitter" src="../../images/icon/twitter.min.svg"></a></li>
-          <li><a href="https://www.facebook.com/hail2u.net" itemprop="sameAs"><img alt="Facebook" src="../../images/icon/facebook.min.svg"></a></li>
-          <li><a href="http://u2liah.tumblr.com/" itemprop="sameAs"><img alt="Tumblr" src="../../images/icon/tumblr.min.svg"></a></li>
-          <li><a href="/feed" rel="alternate" type="application/rss+xml"><img alt="Feed" src="../../images/icon/feed.min.svg"></a></li>
-        </ul>
-      </section>
     </main>
 
     <aside class="subcontent">
@@ -188,6 +177,10 @@
       <section class="footlinks">
         <ul>
           <li><a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a></li>
+          <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
+          <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
+          <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
+          <li><a href="/feed" rel="alternate" type="application/rss+xml">RSS</a></li>
         </ul>
       </section>
     
