--- a/pub/test/627.html
+++ b/pub/test/627.html
@@ -62,14 +62,14 @@
         </li>
         <li class="dir">test
           <ul>
-            <li class="test">expected
+            <li class="dir">expected
               <ul>
                 <li>issue3.css</li>
                 <li>issue11.css</li>
                 <li>issue13.css</li>
               </ul>
             </li>
-            <li class="test">fixture
+            <li class="dir">fixture
               <ul>
                 <li>issue3.css</li>
                 <li>issue11.css</li>
