--- a/pub/test/628.html
+++ b/pub/test/628.html
@@ -63,12 +63,13 @@
     </section>
 
     <script>
-      document.getElementById('to-top').addEventListener('click', function (evt) {
-        document.body.style.transition = 'initial';
-        document.body.style.marginTop = '-' + (window.pageYOffset - 1) + 'px';
+      document.getElementById("to-top").addEventListener("click", function (evt) {
+        var styleBody = document.body.style;
+        styleBody.transition = "initial";
+        styleBody.marginTop = "-" + (window.pageYOffset - 1) + "px";
         window.scrollTo(0, 0);
-        document.body.style.transition = 'margin-top 1s ease-in-out';
-        document.body.style.marginTop = '0px';
+        styleBody.transition = "margin-top 1s ease-in-out";
+        styleBody.marginTop = "0";
         evt.preventDefault();
       });
     </script>
