--- a/pub/test/629.html
+++ b/pub/test/629.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
 
-    <title>window.scrollTo(Inifity, Infinity)</title>
+    <title>window.scrollTo(Infinity, Infinity)</title>
 
     <link href="http://hail2u.net/styles/natural.min.css" rel="stylesheet">
     <style>
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header>
-      <h1>window.scrollTo(Inifity, Infinity)</h1>
+      <h1>window.scrollTo(Infinity, Infinity)</h1>
 
       <p>X・Y座標の代わりに<code>Infinity</code>を指定することで、ページの最下部・最右部へスクロールさせることができる。</p>
     </header>
