--- a/404.html
+++ b/404.html
@@ -7,14 +7,23 @@
     <title>404 Not Found</title>
 
     <style>
-      body {
+      html {
         background-color: #fcf9f0;
         color: #3c3330;
+        display: table;
+        height: 100%;
+        margin: auto;
+        max-width: 39em;
+        width: 100%;
+      }
+
+      body {
+        display: table-cell;
         font-family: "Helvetica Neue", "Calibri", sans-serif;
         line-height: 1.618;
-        margin: 10% auto;
-        max-width: 36em;
-        padding: 2em;
+        margin: 0;
+        padding: 1em;
+        vertical-align: middle;
       }
 
       .logo {
@@ -45,21 +54,20 @@
 
       .input {
         box-sizing: border-box;
-        -moz-box-sizing: border-box;
         font-family: inherit;
         font-size: 100%;
         height: 2em;
-        padding: 0 0.25em;
+        padding: 0 .25em;
         width: 66.667%;
       }
 
       .button {
         box-sizing: border-box;
-        -moz-box-sizing: border-box;
         font-family: inherit;
         font-size: 100%;
         height: 2em;
-        padding: 0.125em 1em;
+        letter-spacing: .75em;
+        padding: .125em .25em .125em 1em;
         vertical-align: bottom;
       }
 
@@ -68,11 +76,11 @@
       }
 
       .byline:before {
-        border-top: 0.125em solid #e1ddd5;
+        border-top: .125em solid #e1ddd5;
         display: block;
         content: '';
         height: 0;
-        margin-bottom: 0.5em;
+        margin-bottom: .875em;
         width: 2em;
       }
 
@@ -85,7 +93,7 @@
   <body>
     <a class="logo" href="/"><img alt="Hail2u.net" src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20fill%3D%22%235bacd0%22%20d%3D%22M-8-8h528v528H-8z%22%2F%3E%3Cpath%20d%3D%22M160%20128v256h16V128zm32%200v256h16V128zm112%200v96h-80v16h96V128zm32%200v256h16V128zM224%20256v16h80v112h16V256z%22%20fill%3D%22%23fcf9f0%22%2F%3E%3C%2Fsvg%3E"></a>
 
-    <h1 class="title"><strong>404</strong>. Error. Probably.</h1>
+    <h1 class="title"><strong>404</strong>. Error, Probably.</h1>
 
     <p class="description">お探しのページは見つかりませんでした。以下の検索フォームより、このウェブサイト内を検索してみてください。</p>
 
