--- a/pub/test/630.html
+++ b/pub/test/630.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Scroll Down Smoothly with CSS Transition</h1>
 
-      <p>下方向へCSS Transitionを使ってスクロールしているように見せる。<code>transform: translateY()</code>を使った後、<code>ontransitionend</code>で<code>scrollIntoView()</code>する。最後のズレはページ下部のマージン？</p>
+      <p>下方向へCSS Transitionを使ってスクロールしているように見せる。<code>transform: translateY()</code>を使った後、<code>ontransitionend</code>で<code>scrollIntoView()</code>する。<del>最後のズレはページ下部のマージン？</del></p>
     </header>
 
     <section class="test">
@@ -79,9 +79,10 @@
           bottom.scrollIntoView();
           body.removeEventListener('transitionend', doScroll, false);
         };
+        var scrollDistance = Math.min(bottom.offsetTop, body.scrollHeight - window.innerHeight);
         body.addEventListener('transitionend', doScroll, false);
         bodyStyle.transition = 'transform 5s ease-in-out';
-        bodyStyle.transform = 'translateY(-' + (bottom.offsetTop + bottom.scrollHeight - window.innerHeight) + 'px)';
+        bodyStyle.transform = 'translateY(-' + scrollDistance + 'px)';
       }, false);
     </script>
   </body>
