--- a/pub/test/630.html
+++ b/pub/test/630.html
@@ -19,7 +19,7 @@
       <h1>Lorem Ipsum</h1>
 
       <section class="test">
-        <p><button id="to-bottom">Jump to Bottom</button></p>
+        <p><button id="to-bottom">Jump to Bottom</button> <button id="to-middle">Jump to Middle</button></p>
       </section>
 
       <p>Dolor sit amet, consectetur adipiscing elit. Donec sagittis gravida erat, et aliquet ex vehicula sit amet. Suspendisse eget lectus massa. Praesent volutpat dapibus tortor eget tincidunt. Etiam id metus nec quam ultrices eleifend vitae maximus ipsum. Ut quis mi sagittis, porttitor augue vel, scelerisque turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam pharetra lectus nec accumsan tincidunt. Integer neque mauris, volutpat at fringilla eu, molestie sit amet justo. In lacinia nisi in metus viverra volutpat. Aliquam erat volutpat.</p>
@@ -41,6 +41,12 @@
       <p>Donec et mauris non eros sagittis ultrices ac pellentesque dolor. Nulla fermentum maximus justo ornare faucibus. Duis sem quam, porttitor ac neque ut, tempor iaculis sapien. Cras ut viverra nulla. Vestibulum quis lorem pellentesque, pharetra lacus nec, pellentesque turpis. In enim orci, feugiat vitae ligula ut, molestie varius tellus. Pellentesque in viverra mi, ac ultrices orci. Curabitur ullamcorper nulla lectus, non semper nunc tincidunt eu. Nullam et justo justo. Proin id ligula nec sem maximus porta et nec nibh. Suspendisse diam lorem, venenatis sit amet volutpat nec, condimentum eu velit. Duis a eros laoreet, vestibulum turpis in, sagittis erat. Integer fermentum, nibh vitae fermentum euismod, elit dolor malesuada dolor, non commodo dui libero et lorem.</p>
 
       <p>Libero eu ipsum hendrerit varius. Nullam consequat feugiat laoreet. Donec ut sem sem. Nam rutrum nunc sed velit ultricies condimentum. Vestibulum in ex id lectus laoreet commodo vel nec lorem. Donec mollis dui ut congue pellentesque. Praesent lobortis imperdiet eros, non convallis neque cursus vel. Aenean convallis neque posuere, mollis metus vel, tempor nisl. Phasellus sodales nisl tellus, varius tristique nisi consequat a. Praesent iaculis blandit commodo. Nulla iaculis sem a lorem consectetur vulputate. Nulla mi eros, mattis quis purus ut, pulvinar fringilla lectus. Quisque volutpat nisi rhoncus enim iaculis, in euismod quam convallis. Maecenas at elementum ligula.</p>
+
+      <section id="middle">
+        <h1>Hi!</h1>
+
+        <p>It’s middle of this page!</p>
+      </section>
 
       <p>Morbi facilisis molestie felis ac laoreet. Duis id consequat libero. Proin ullamcorper sem nec mauris sollicitudin semper. Suspendisse id eros et magna pulvinar venenatis. In gravida luctus risus ut ullamcorper. Nulla imperdiet faucibus bibendum. Quisque vitae dapibus ligula, sit amet sollicitudin nunc. Nulla nec volutpat lorem.</p>
 
@@ -71,19 +77,26 @@
 
     <script>
       document.getElementById('to-bottom').addEventListener('click', function () {
+        scrollToElm(document.getElementById('bottom'));
+      }, false);
+
+      document.getElementById('to-middle').addEventListener('click', function () {
+        scrollToElm(document.getElementById('middle'));
+      }, false);
+
+      function scrollToElm(to) {
         var body = document.body;
-        var bodyStyle = body.style;
-        var bottom = document.getElementById('bottom');
+        var styleBody = body.style;
         var doScroll = function () {
-          bodyStyle.transition = bodyStyle.transform = 'initial';
-          bottom.scrollIntoView();
+          styleBody.transition = styleBody.transform = 'initial';
+          to.scrollIntoView();
           body.removeEventListener('transitionend', doScroll, false);
         };
-        var scrollDistance = Math.min(bottom.offsetTop, body.scrollHeight - window.innerHeight);
+        var scrollDistance = Math.min(to.offsetTop, body.scrollHeight - window.innerHeight);
         body.addEventListener('transitionend', doScroll, false);
-        bodyStyle.transition = 'transform 5s ease-in-out';
-        bodyStyle.transform = 'translateY(-' + scrollDistance + 'px)';
-      }, false);
+        styleBody.transition = 'transform 5s ease-in-out';
+        styleBody.transform = 'translateY(-' + scrollDistance + 'px)';
+      }
     </script>
   </body>
 </html>
