--- a/pub/test/630.html
+++ b/pub/test/630.html
@@ -82,7 +82,7 @@
         var root = document.documentElement;
         var styleRoot = root.style;
         var doScroll = function () {
-          styleRoot.transition = styleRoot.marginTop = 'initial';
+          styleRoot.transition = styleRoot.transform = 'initial';
           window.scrollTo(0, to.offsetTop);
           root.removeEventListener('transitionend', doScroll, false);
         };
@@ -91,8 +91,8 @@
           root.scrollHeight - window.innerHeight
         );
         root.addEventListener('transitionend', doScroll, false);
-        styleRoot.transition = 'margin-top 1s ease-in-out';
-        styleRoot.marginTop = scrollDistance + 'px';
+        styleRoot.transition = 'transform 1s ease-in-out';
+        styleRoot.transform = 'translateY(' + scrollDistance + 'px';
       }
 
       document.getElementById('to-bottom').addEventListener('click', function () {
