--- a/pub/test/630.html
+++ b/pub/test/630.html
@@ -92,7 +92,7 @@
         );
         root.addEventListener('transitionend', doScroll, false);
         styleRoot.transition = 'transform 1s ease-in-out';
-        styleRoot.transform = 'translateY(' + scrollDistance + 'px';
+        styleRoot.transform = 'translate3d(0, ' + scrollDistance + 'px, 0)';
       }
 
       document.getElementById('to-bottom').addEventListener('click', function () {
