--- a/about/index.html
+++ b/about/index.html
@@ -156,7 +156,7 @@
 
         <h2>マークアップとスタイルシート</h2>
 
-        <p>マークアップは<a href="http://www.w3.org/TR/html5/">HTML5</a>に従って行っています。スタイルシートはSassの<a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>を使ってCSS 3で書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。何か問題を見つけた場合は<a href="#contact">問い合わせ</a>より教えてくれると助かります。</p>
+        <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML5 (WHATWG版)</a>に従って行っています。スタイルシートはSassの<a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>を使ってCSS 3で書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。何か問題を見つけた場合は<a href="#contact">問い合わせ</a>より教えてくれると助かります。</p>
 
         <h2>広告</h2>
 
@@ -172,21 +172,26 @@
       <section id="contact">
         <h1>問い合わせ</h1>
 
-        <p>このウェブサイト内のコンテンツについて、報告や問い合わせ・クレーム等がある場合は以下のいずれかの手段で連絡してください。</p>
+        <p>このウェブサイト内のコンテンツについて報告や問い合わせ・クレーム等がある場合は、以下のコンタクト・フォームで連絡してください。<a href="https://twitter.com/hail2unet">Twitterでの@ツイート</a>や<a href="https://www.facebook.com/hail2u.net">Facebookでのメッセージ</a>でも構いません。</p>
 
-        <ul>
-          <li><a href="https://twitter.com/hail2unet">Twitterでの@ツイート</a></li>
-          <li><a href="https://www.facebook.com/hail2u.net">Facebookでのメッセージ</a></li>
-          <li><a href="mailto:hail2u@gmail.com">hail2u@gmail.com宛てのメール</a></li>
-        </ul>
+        <form class="contact-form" action="//formspree.io/hail2u@gmail.com" method="POST">
+          <input class="spamfree" name="_gotcha" type="text">
+          <label class="cell half for-name">Your Name:
+            <input class="text-field" name="name" placeholder="山田太郎" type="text"></label>
+          <label class="cell half for-email">Your Email:
+            <input class="text-field" name="email" placeholder="t.yamada@example.com" type="email"></label>
+          <label class="cell full for-message">Your Message:
+            <textarea class="text-field" name="message" placeholder="こんにちは！" rows="3"></textarea></label>
+          <input class="button" type="submit" value="Send">
+        </form>
 
-        <p>メールによる問い合わせの内容は、原則的に誰にも公開されません。</p>
+        <p>コンタクト・フォームによる問い合わせの内容は原則的に誰にも公開されません。</p>
       </section>
     </main>
 
     <aside class="subcontent">
       <!-- Google Custom Search Engine -->
-      <form class="site-search" action="https://www.google.com/cse" role="search">
+      <form class="site-search" action="//www.google.com/cse" role="search">
         <input name="cx" type="hidden" value="partner-pub-8712792805045949:3747342316">
         <input name="ie" type="hidden" value="UTF-8">
         <input class="query" name="q" size="32" type="search">
