--- a/pub/test/630.html
+++ b/pub/test/630.html
@@ -82,7 +82,7 @@
         var root = document.documentElement;
         var styleRoot = root.style;
         var doScroll = function () {
-          styleRoot.transition = styleRoot.transform = 'initial';
+          styleRoot.transition = styleRoot.webkitTransition = styleRoot.transform = styleRoot.webkitTransform = 'initial';
           window.scrollTo(0, to.offsetTop);
           root.removeEventListener('transitionend', doScroll, false);
         };
@@ -92,7 +92,8 @@
         );
         root.addEventListener('transitionend', doScroll, false);
         styleRoot.transition = 'transform 1s ease-in-out';
-        styleRoot.transform = 'translate3d(0, ' + scrollDistance + 'px, 0)';
+        styleRoot.webkitTransition = '-webkit-transform 1s ease-in-out';
+        styleRoot.transform = styleRoot.webkitTransform = 'translateY(' + scrollDistance + 'px)';
       }
 
       document.getElementById('to-bottom').addEventListener('click', function () {
