--- a/pub/test/631-2.html
+++ b/pub/test/631-2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
 
-    <title>Centering Unknown with CSS Transform</title>
+    <title>Centering Unknown with CSS Transform (right/bottom)</title>
 
     <link href="http://hail2u.net/styles/natural.min.css" rel="stylesheet">
     <style>
@@ -42,7 +42,7 @@
   <body>
     <section class="test">
       <div class="test-inner">
-        <h1>Centering Unknown with CSS Transform</h1>
+        <h1>Centering Unknown with CSS Transform (right/bottom)</h1>
 
         <pre><code>bottom: 50%;
 right: 50%;
