--- a/about/index.html
+++ b/about/index.html
@@ -88,8 +88,8 @@
         <p>このウェブサイトの更新情報は、以下の2種類のRSSフィードで配信しています。</p>
 
         <ul>
-          <li><a href="http://hail2u.net/feed" rel="alternate" type="application/rss+xml">ウェブサイトの更新情報とウェブログの記事</a></li>
-          <li><a href="http://hail2u.net/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
+          <li><a href="/feed" rel="alternate" type="application/rss+xml">ウェブサイトの更新情報とウェブログの記事</a></li>
+          <li><a href="/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
         </ul>
 
         <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>や<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebookページ</a>、<a href="http://u2liah.tumblr.com/" rel="alternate" type="text/html">Tumblr</a>でも購読することができます。</p>
@@ -97,11 +97,11 @@
         <h2>ライセンス</h2>
 
         <figure>
-          <a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img alt="Creative Commons — Attribution-NonCommercial" src="/images/about/cc-by-nc.png"></a>
+          <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img alt="Creative Commons — Attribution-NonCommercial" src="/images/about/cc-by-nc.png"></a>
           <figcaption>License Everything under a CC BY-NC</figcaption>
         </figure>
 
-        <p>このウェブサイト内の全ての文書とファイル(画像やスタイルシートを含みます)は、そのファイル自体に別のライセンス情報が明記または添付されていない限り<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license">Creative Commons — Attribution-NonCommercial</a>の元で公開されています。</p>
+        <p>このウェブサイト内の全ての文書とファイル(画像やスタイルシートを含みます)は、そのファイル自体に別のライセンス情報が明記または添付されていない限り<a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">Creative Commons — Attribution-NonCommercial</a>の元で公開されています。</p>
       </section>
 
       <aside class="ads">
@@ -127,7 +127,8 @@
           <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
           <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
           <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
-          <li><a href="http://fontforge.github.io/en-US/">FontForge</a></li>
+          <li><a href="https://fontforge.github.io/en-US/">FontForge</a></li>
+          <li><a href="http://www.gimp.org/">GIMP</a></li>
           <li><a href="http://git-scm.com/">Git</a></li>
           <li><a href="http://gruntjs.com/">Grunt</a></li>
           <li><a href="http://handlebarsjs.com/">Handlebars.js</a></li>
@@ -135,10 +136,9 @@
           <li><a href="http://inkscape.org/">Inkscape</a></li>
           <li><a href="http://jpegclub.org/jpegtran/">jpegtran</a></li>
           <li><a href="http://daringfireball.net/projects/markdown/">Markdown</a></li>
-          <li><a href="http://nodejs.org/">Node.js</a></li>
+          <li><a href="https://nodejs.org/">Node.js</a></li>
           <li><a href="http://optipng.sourceforge.net/">OptiPNG</a></li>
-          <li><a href="http://www.adobe.com/products/photoshop/">Photoshop</a></li>
-          <li><a href="http://pngquant.org/">pngquant</a></li>
+          <li><a href="https://pngquant.org/">pngquant</a></li>
           <li><a href="http://sass-lang.com/">Sass</a></li>
           <li><a href="https://people.mozilla.org/~jkew/woff/">sfnt2woff</a></li>
           <li><a href="https://github.com/svg/svgo">SVGO</a></li>
@@ -150,21 +150,21 @@
         <h2>ウェブサイト上で使っているツール</h2>
 
         <ul class="flat-ul">
-          <li><a href="http://necolas.github.io/normalize.css/">Normalize.css</a></li>
+          <li><a href="https://necolas.github.io/normalize.css/">Normalize.css</a></li>
           <li><a href="https://github.com/hail2u/unutm">UnUTM</a></li>
         </ul>
 
         <h2>マークアップとスタイルシート</h2>
 
-        <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML5 (WHATWG版)</a>に従って行っています。スタイルシートはSassの<a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>を使ってCSS 3で書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。何か問題を見つけた場合は<a href="#contact">問い合わせ</a>より教えてくれると助かります。</p>
+        <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML5 (WHATWG版)</a>に従って行っています。スタイルシートはSassの<a href="https://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>を使ってCSS 3で書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。何か問題を見つけた場合は<a href="#contact">問い合わせ</a>より教えてくれると助かります。</p>
 
         <h2>広告</h2>
 
-        <p>広告は<a href="http://www.google.com/adsense">Google AdSense</a>または<a href="http://affiliate.amazon.co.jp/?_encoding=UTF8&amp;tag=hail2unet-22&amp;linkCode=ur2&amp;camp=247&amp;creative=1211">Amazonアソシエイト・プログラム</a>のバナーです。Google AdSenseが収集している情報については<a href="http://www.google.com/intl/ja/policies/privacy/ads/">そのプライバシーについてのFAQ</a>を、Amazonアソシエイトの収集している情報については<a href="http://rcm-jp.amazon.co.jp/e/cm/privacy-policy.html?o=9">そのプライバシー情報</a>を参照してください。</p>
+        <p>広告は<a href="https://www.google.com/adsense">Google AdSense</a>または<a href="https://affiliate.amazon.co.jp/?_encoding=UTF8&amp;tag=hail2unet-22&amp;linkCode=ur2&amp;camp=247&amp;creative=1211">Amazonアソシエイト・プログラム</a>のバナーです。Google AdSenseが収集している情報については<a href="https://www.google.com/intl/ja/policies/privacy/ads/">そのプライバシーについてのFAQ</a>を、Amazonアソシエイトの収集している情報については<a href="https://rcm-jp.amazon.co.jp/e/cm/privacy-policy.html?o=9">そのプライバシー情報</a>を参照してください。</p>
 
         <h2>訪問者の追跡</h2>
 
-        <p>訪問者の情報を<a href="http://www.google.com/analytics/">Google Analytics</a>を使って収集しています。Analyticsによるデータの収集はこのウェブサイト自身のクッキーを利用しているので、完全に無効化するには<a href="http://tools.google.com/dlpage/gaoptout">Google Analytics Opt-out Browser Add-on</a>をご使用のブラウザにインストールする必要があります。</p>
+        <p>訪問者の情報を<a href="https://www.google.com/analytics/">Google Analytics</a>を使って収集しています。Analyticsによるデータの収集はこのウェブサイト自身のクッキーを利用しているので、完全に無効化するには<a href="https://tools.google.com/dlpage/gaoptout">Google Analytics Opt-out Browser Add-on</a>をご使用のブラウザにインストールする必要があります。</p>
 
         <p>その他にも使用しているソーシャル・メディアのウィジェット、例えば<a href="https://about.twitter.com/resources/buttons">Twitterの共有ボタン</a>等によりトラッキングが行われている可能性があります。ウィジェットによりオプトアウトする方法が異なるので、それぞれの提供元を参照してください。</p>
       </section>
@@ -200,7 +200,7 @@
     <footer class="global-footer" role="contentinfo">
       <section class="footlinks">
         <ul>
-          <li><a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a></li>
+          <li><a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a></li>
           <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
           <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
           <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
