--- a/documents/index.html
+++ b/documents/index.html
@@ -145,7 +145,7 @@
       <section>
         <h1><a href="/documents/html-img-alt.html">HTMLにおけるimg要素のalt属性</a></h1>
 
-        <p><a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/">HTML Standard</a>の<code>img</code>要素の<code>alt</code>属性についてのガイドである<a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/embedded-content-1.html#alt">4.8.1.1 Requirements for providing text to act as an alternative for images</a>をざっと把握できるように日本語で箇条書きにしたものです。これで全容をアバウトに把握してから原文を読むとより理解しやすくなると思います。</p>
+        <p><a href="https://html.spec.whatwg.org/multipage/">HTML仕様</a>の<code>img</code>要素の<code>alt</code>属性についてのガイドである<a href="https://html.spec.whatwg.org/multipage/embedded-content.html#alt">4.8.1.1 Requirements for providing text to act as an alternative for images</a>をざっと把握できるように日本語で箇条書きにしたものです。これで全容をアバウトに把握してから原文を読むとより理解しやすくなると思います。</p>
       </section>
 
       <section>
@@ -223,7 +223,7 @@
       <section>
         <h1><a href="/documents/sortable-pokemon-list.html">ソート機能付き ポケモン一覧表</a></h1>
 
-        <p><a href="http://www.pokemon.co.jp/">ポケットモンスター</a> <a href="http://www.amazon.co.jp/%E4%BB%BB%E5%A4%A9%E5%A0%82-13306241-237839011-%E3%83%9D%E3%82%B1%E3%83%83%E3%83%88%E3%83%A2%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%BC-%E3%83%80%E3%82%A4%E3%83%A4%E3%83%A2%E3%83%B3%E3%83%89/dp/B000HIDYOY%3FSubscriptionId%3D08PWFCAAQ5TZJT30SKG2%26tag%3Dhail2unet-22%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3DB000HIDYOY">ダイヤモンド</a>・<a href="http://www.amazon.co.jp/%E4%BB%BB%E5%A4%A9%E5%A0%82-13306241-237839011-%E3%83%9D%E3%82%B1%E3%83%83%E3%83%88%E3%83%A2%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%BC-%E7%89%B9%E5%85%B8%E3%81%AA%E3%81%97/dp/B000HIG33I%3FSubscriptionId%3D08PWFCAAQ5TZJT30SKG2%26tag%3Dhail2unet-22%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3DB000HIG33I">パール</a>のポケモンの一覧表。HP・こうげき・ぼうぎょ・とくこう・とくぼう等でソートして、そこそこ能力はありそうだけどマイナーなポケモンを探すために。</p>
+        <p><a href="http://www.pokemon.co.jp/">ポケットモンスター</a> <a href="https://www.amazon.co.jp/%E4%BB%BB%E5%A4%A9%E5%A0%82-13306241-237839011-%E3%83%9D%E3%82%B1%E3%83%83%E3%83%88%E3%83%A2%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%BC-%E3%83%80%E3%82%A4%E3%83%A4%E3%83%A2%E3%83%B3%E3%83%89/dp/B000HIDYOY%3FSubscriptionId%3D08PWFCAAQ5TZJT30SKG2%26tag%3Dhail2unet-22%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3DB000HIDYOY">ダイヤモンド</a>・<a href="https://www.amazon.co.jp/%E4%BB%BB%E5%A4%A9%E5%A0%82-13306241-237839011-%E3%83%9D%E3%82%B1%E3%83%83%E3%83%88%E3%83%A2%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%BC-%E7%89%B9%E5%85%B8%E3%81%AA%E3%81%97/dp/B000HIG33I%3FSubscriptionId%3D08PWFCAAQ5TZJT30SKG2%26tag%3Dhail2unet-22%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3DB000HIG33I">パール</a>のポケモンの一覧表。HP・こうげき・ぼうぎょ・とくこう・とくぼう等でソートして、そこそこ能力はありそうだけどマイナーなポケモンを探すために。</p>
       </section>
 
       <section>
@@ -318,7 +318,7 @@
     <footer class="global-footer" role="contentinfo">
       <section class="footlinks">
         <ul>
-          <li><a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a></li>
+          <li><a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a></li>
           <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
           <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
           <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
