--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
               
 
-              <p>遂に<div itemprop="articleBody">というタグに耐え切れなくなったので、main要素をネストする方向に書き換えた。HTML5仕様ではmain要素はドキュメントごとにひとつしか許されないが、WHATWG版HTML仕様ではそのような縛りはない。すっきりした。</p>
+              <p>遂に&lt;div itemprop=&quot;articleBody&quot;&gt;というタグに耐え切れなくなったので、main要素をネストする方向に書き換えた。HTML5仕様ではmain要素はドキュメントごとにひとつしか許されないが、WHATWG版HTML仕様ではそのような縛りはない。すっきりした。</p>
             </a>
         </section>
 
